# serializer version: 1
# name: test_all_entities[switch.my_pool_electrolysis_boost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.my_pool_electrolysis_boost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electrolysis boost',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Electrolysis boost',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electrolysis_boost',
    'unique_id': 'ABCDEF1234567890-electrolysis_boost',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.my_pool_electrolysis_boost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Electrolysis boost',
    }),
    'context': <ANY>,
    'entity_id': 'switch.my_pool_electrolysis_boost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.my_pool_electrolysis_cover-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.my_pool_electrolysis_cover',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electrolysis cover',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Electrolysis cover',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electrolysis_cover',
    'unique_id': 'ABCDEF1234567890-electrolysis_cover',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.my_pool_electrolysis_cover-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Electrolysis cover',
    }),
    'context': <ANY>,
    'entity_id': 'switch.my_pool_electrolysis_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.my_pool_filtration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.my_pool_filtration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtration',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filtration',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration',
    'unique_id': 'ABCDEF1234567890-filtration',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.my_pool_filtration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Filtration',
    }),
    'context': <ANY>,
    'entity_id': 'switch.my_pool_filtration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.my_pool_relay_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.my_pool_relay_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relay 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relay 1',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay',
    'unique_id': 'ABCDEF1234567890-relay_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.my_pool_relay_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Relay 1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.my_pool_relay_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.my_pool_relay_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.my_pool_relay_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relay 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relay 2',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay',
    'unique_id': 'ABCDEF1234567890-relay_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.my_pool_relay_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Relay 2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.my_pool_relay_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.my_pool_relay_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.my_pool_relay_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relay 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relay 3',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay',
    'unique_id': 'ABCDEF1234567890-relay_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.my_pool_relay_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Relay 3',
    }),
    'context': <ANY>,
    'entity_id': 'switch.my_pool_relay_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.my_pool_relay_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.my_pool_relay_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relay 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relay 4',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay',
    'unique_id': 'ABCDEF1234567890-relay_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.my_pool_relay_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Pool Relay 4',
    }),
    'context': <ANY>,
    'entity_id': 'switch.my_pool_relay_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
